test/langtools/tools/javac/specialConstantFolding/warningNotFoundOrIncorrect/WarningIfClassOrMemberNotFound3.out
WarningIfClassOrMemberNotFound3.java:18:23: compiler.warn.member.not.found.at.class: <init>, class, WarningIfClassOrMemberNotFound3.I
WarningIfClassOrMemberNotFound3.java:23:23: compiler.warn.member.not.found.at.class: strField, class, WarningIfClassOrMemberNotFound3.I
WarningIfClassOrMemberNotFound3.java:28:23: compiler.warn.member.not.found.at.class: strField, class, WarningIfClassOrMemberNotFound3.I
- compiler.err.warnings.and.werror
1 error
3 warnings
